# tennis_book_cpp

./: .gitignore  CMakeLists.txt  README.md  input_simulator.h  main.cpp  mainwidget.cpp  mainwidget.h  opencl_image_finder.cpp  path.cmake
client/: CMakeLists.txt  geometry_area.h  input_simulator.h  main.cpp  mainwidget.cpp  mainwidget.h  opencl_image_finder.cpp  opencl_image_finder.h  resources.qrc
server/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
